--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <div class="main">
+    <div class="fondo__index">
     <header class="navbar navbar-expand-lg header">
         <div class="container-fluid">
             <div class="container d-flex justify-content-between">
@@ -55,7 +56,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="contenedor__index">
         <section class="container">
             <div class="container titulo mt-4">
                 <h1 class="text-center">GUIA DE TURISMO EN <br> RIO DE JANEIRO</h1>
@@ -64,24 +65,14 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./assets/img/carrusel1.jpg" class="d-block w-100 carrusel" alt="vista de la ciudad">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Primer Imagen</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, doloribus.</p>
-                        </div>
+                       
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/img/carrusel2.jpg" class="d-block w-100 carrusel" alt="playa de copacabana">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Segunda Imagen</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, eveniet.</p>
-                        </div>
+                        
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/img/carrusel3.jpg" class="d-block w-100 carrusel" alt="laguna de freitas">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Tercera Imagen</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, fugit.</p>
-                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -98,14 +89,12 @@
         </section>
 
         <section class="container">
-            <h2 class="text-center mt-3">El lugar donde empieza tu viaje</h2>
-            <p class=" text-center mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ad dolor velit non
-                reiciendis totam
-                consequuntur nihil, voluptatem id eos excepturi ut possimus, ullam, saepe inventore. Vitae minus earum
-                cum. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolore magnam minima nihil consectetur
-                nesciunt, laudantium vel dignissimos harum nisi, nostrum quo aliquam, reiciendis placeat. Aliquid
-                tenetur ea eum laudantium.</p>
+            <h2 class="text-center titulo__inicio">El lugar donde empieza tu viaje</h2>
+            <p class=" text-center texto__inicio">¿Que estas esperando para empezar hoy mismo tus vacaciones?
+                <br>Una vez un sabio dijo "los viajes se disfrutan 3 veces, cuando se suñan, cuando se viven y cuando se recuerdan". <br>
+                Este es el momento perfecto para empezar a hacer realidad tus sueños, y para nosotros seria un honor que nos elijan como los responsables de llevar a cabo su viaje a la perfeccion.
+                <br>Estamos completamente a tu disposicion, para asesorarte y responder cualquier duda que tengas. Saluda TransParada.
+            </p>
         </section>
 
     </main>
