--- a/pages/carnaval.html
+++ b/pages/carnaval.html
@@ -9,10 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 </head>
-
+<div class="fondo__carnaval">
 <body>
     <div class="main">
         <header class="navbar navbar-expand-lg header">
@@ -60,7 +61,7 @@
             <div class="container titulo__tours mt-4">
                 <h2 class="text-center">CARNAVAL DE RIO DE JANEIRO</h2>
             </div>
-            <p class="fs-2 text-center">¡Experimenta con nostros el carnaval mas grande del mundo!</p>
+            <p class="carnaval__texto">¡Experimenta con nostros el carnaval mas grande del mundo!</p>
             <section class="container mb-3">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -84,7 +85,7 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
-                    <h2 class="text-center mt-4">RESERVA AHORA TUS TICKET</h2>
+                    <h2 class="carnaval__texto">Reserva ahora tus ticket!</h2>
 
                     <table class="table">
                         <thead>
@@ -116,7 +117,7 @@
                     </table>
                 </div>
                 <div class="container">
-                    <a class="btn btn-primary d-flex justify-content-center boton" href="./contacto.html" role="button">COMPRAR TICKETS</a>
+                    <a class=" boton" href="./contacto.html" role="button">COMPRAR TICKETS</a>
                 </div>
             </section>
         </main>
@@ -154,6 +155,7 @@
             </div>
         </footer>
     </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
