--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,11 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+    <div class="fondo__nosotros">
     <div class="main">
         <header class="navbar navbar-expand-lg header">
             <div class="container-fluid">
@@ -57,24 +59,15 @@
         </header>
 
         <main>
-            <div class="container titulo__tours mt-4">
-                <h2 class="text-center">Conociendo a tu proximo guia</h2>
+            <div class="container titulo__paginas">
+                <h2>Conociendo a tu proximo guia</h2>
             </div>
             <div class="container d-flex flex-column align-items-center mb-4">
-                <img class="w-50 mb-3 " src="../assets/img/clienteUno.jpeg" alt="">
-                <p class="fs-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id velit sapiente harum perspiciatis sint
-                    optio
-                    dolorem eveniet sed quisquam eius quis modi ullam delectus praesentium, maxime amet porro, nobis
-                    quidem.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, omnis, culpa debitis nulla
-                    neque
-                    unde fugit enim sed quasi nisi explicabo sequi. Dolores rerum ex aliquam molestias ratione quod
-                    eveniet.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ratione asperiores temporibus dolor
-                    facilis. Ea quis voluptates velit inventore molestias asperiores perferendis! Alias itaque debitis
-                    amet
-                    sequi, quasi vel earum?
+                <img class="mb-3 imagen__nosotros" src="../assets/img/clienteUno.jpeg" alt="">
+                <p class="texto__nosotros">
+                    Mi nombre es Gabriel Parada, tengo 45 años, soy de nacionalidad Argentina, pero actualmente vivo en Brasil.
+                    Hace al rededor de 10 años, tome la decision de dejar mi estilo de vida de oficinista y la rutina. Empezo todo con la idea de emigrar a Brasil, mas precisamente a la ciudad de Rio de Janeiro, ya que me atraia mucho la ciudad por su gran diversidad, porque la misma posee diferentas paisajes, tanto sus playas como sus morros y lo encantador de la gran ciudad.
+                    Fue asi como me decidi en estudiar la profesion de guia de turismo, porque me dejaba disfrutar lo que mas me gusta en esta hermosa ciudad y poder compartir esta pasion con mis clientes.
                 </p>
             </div>
         </main>
@@ -111,6 +104,7 @@
             </div>
         </footer>
     </div>
+</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
