--- a/pages/tour.html
+++ b/pages/tour.html
@@ -9,12 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="main">
+    <div class="main  tour__contenedor">
         <header class="navbar navbar-expand-lg header">
             <div class="container-fluid">
                 <div class="container d-flex justify-content-between">
@@ -60,222 +61,60 @@
                 <h2 class="text-center">NUESTROS TOURS</h2>
             </div>
 
-            <section id="citytour">
+            <section id="tours">
                 <div class="container">
-                    <div class="row">
+                    <div class="row ">
 
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CityTour.jpg" class="card-img-top h-100"
+                        <div class="card carta__estilo col-lg-3 col-md-6">
+                            <img src="../assets/img/CityTour.jpg" class="tour__img"
                                 alt="ciudad de rio de janeiro">
                             <div class="card-body">
-                                <h3 class="card-title text-center letra">CITY TOUR <br>Paquete Completo</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
+                                <h3 class="card-title text-center letra">City Tour
+                                    </h3>
+                                <p class="card-text">Recorrido turístico privado de Río de Janeiro con un conductor-guía o guía y conductor separados Enfoque sus visitas a la historia o naturaleza de Río, incluyendo Corcovado. <br>
+                                     El precio es por grupo; Acomoda hasta 15 personas para asegurar una experiencia íntima. Conveniente transporte de ida y vuelta disponible desde el hotel, puerto o aeropuertos; las tarifas de entrada son extra</p>
                                 <a href="./contacto.html"
                                     class="btn btn-primary d-flex justify-content-center">comprar</a>
                             </div>
                         </div>
 
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CityTour.jpg" class="card-img-top h-100"
-                                alt="ciudad de rio de janeiro">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">CITY TOUR <br>Paquete Normal</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CityTour.jpg" class="card-img-top h-100"
-                                alt="ciudad de rio de janeiro">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">CITY TOUR <br>Paquete Basico</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="cristoredentor">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CristoRedentor.jpeg" class="card-img-top h-100"
+                        <div class="card carta__estilo col-lg-3 col-md-6">
+                            <img src="../assets/img/CristoRedentor.jpeg" class="tour__img"
                                 alt="cristo Redentor">
                             <div class="card-body">
-                                <h3 class="card-title text-center letra">Cristo Redentor <br>Paquete Completo</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
+                                <h3 class="card-title text-center letra">Cristo Redentor</h3>
+                                <p class="card-text">Obtenga una visión general de los lugares más importantes de Río durante esta completa excursión de 8 horas. Con un guía local, viaje a través del bosque de Tijuca, deteniéndose en Paineiras para abordar el transporte a la cima de Corcovado, hogar de la estatua del Cristo Redentor. Tome el teleférico de Urca hasta la cima de Sugar Loaf Mountain, luego almuerce en uno de los mejores asadores de la ciudad antes de visitar el estadio Maracanã y el Sambadrome. El transporte de ida y vuelta desde los hoteles de Río está incluido.</p>
                                 <a href="./contacto.html"
                                     class="btn btn-primary d-flex justify-content-center">comprar</a>
                             </div>
                         </div>
 
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CristoRedentor.jpeg" class="card-img-top h-100"
-                                alt="cristo Redentor">
+                        <div class="card carta__estilo col-lg-3 col-md-6">
+                            <img src="../assets/img/PanDeAzucar.jpg" class="tour__img" alt="Pan De Azucar">
                             <div class="card-body">
-                                <h3 class="card-title text-center letra">Cristo Redentor <br>Paquete Normal</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
+                                <h3 class="card-title text-center letra">Pan De Azucar</h3>
+                                <p class="card-text">Suba a el Pan de Azúcar en la mañana temprano para evitar las aglomeraciones en esta excursión de 5 horas en Río de Janeiro. Después de una brillante y temprana recogida en su hotel de Río, viaje a través del Bosque Nacional de Tijuca. Después de aprender sobre su historia con su guía local, vaya a la montaña Pan de Azúcar para disfrutar de unas vistas espectaculares de la inmensa ciudad, que despierta lentamente con la luz de la mañana. Durante su viaje, pasará por varios otros monumentos, como el Palácio Guanabara, Largo do Boticário y Casa dos Abacaxis.</p>
                                 <a href="./contacto.html"
                                     class="btn btn-primary d-flex justify-content-center">comprar</a>
                             </div>
                         </div>
 
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/CristoRedentor.jpeg" class="card-img-top h-100"
-                                alt="cristo Redentor">
+                        <div class="card carta__estilo col-lg-3 col-md-6">
+                            <img src="../assets/img/PiedraDeTelegrafo.jpg" class="tour__img"
+                                alt="Piedra del Telegrafo">
                             <div class="card-body">
-                                <h3 class="card-title text-center letra">Cristo Redentor <br>Paquete Basico</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
+                                <h3 class="card-title text-center letra ">Piedra del telegrafo</h3>
+                                <p class="card-text">Telegraph Rock es una de las montañas más visitadas del Parque Pedra Branca debido a su caída libre de rocas ilusorias. Con unos 347 metros de altitud, tiene una vista privilegiada de la ciudad. Para llegar al inicio del sendero, cruzamos toda la zona sur, pasando por zona oeste, Prainha, Playa Grumari, Macumba, Barra Da Tijuca, Pepino (punto de vuelo libre), Mirador Leblon, Ipanema y Copacabana.</p>
                                 <a href="./contacto.html"
                                     class="btn btn-primary d-flex justify-content-center">comprar</a>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
             </section>
 
-            <section id="pandeazucar">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PanDeAzucar.jpg" class="card-img-top h-100" alt="Pan De Azucar">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">Pan De Azucar <br>Paquete Completo</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PanDeAzucar.jpg" class="card-img-top h-100" alt="Pan De Azucar">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">Pan De Azucar <br>Paquete Normal</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PanDeAzucar.jpg" class="card-img-top h-100" alt="Pan De Azucar">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">Pan De Azucar <br>Paquete Basico</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="piedradeltelegrafo">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PiedraDeTelegrafo.jpg" class="card-img-top h-100"
-                                alt="Piedra del Telegrafo">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">piedra del telegrafo <br>Paquete Completo</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PiedraDeTelegrafo.jpg" class="card-img-top h-100"
-                                alt="Piedra del Telegrafo">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">piedra del telegrafo <br>Paquete Normal</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-
-                        <div class="card carta__estilo col-lg-4 col-md-4">
-                            <img src="../assets/img/PiedraDeTelegrafo.jpg" class="card-img-top h-100"
-                                alt="Piedra del Telegrafo">
-                            <div class="card-body">
-                                <h3 class="card-title text-center letra">piedra del telegrafo <br>Paquete Basico</h3>
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                                    ipsum
-                                    explicabo modi accusamus vitae qui aliquam sunt temporibus, numquam id officiis
-                                    laborum
-                                    veniam
-                                    quas quis error, ipsam, fuga enim doloribus.</p>
-                                <a href="./contacto.html"
-                                    class="btn btn-primary d-flex justify-content-center">comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </main>
 
         <footer class="container-fluid">
