--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 </head>
 
@@ -56,44 +57,44 @@
             </div>
         </header>
 
-        <main>
-            <div class="container titulo__tours mt-4">
+        <main class="fondo__contacto">
+            <div class="container titulo__paginas mt-4">
                 <h2 class="text-center"> EMPEZA TU VIAJE AHORA</h2>
             </div>
 
             <div class="container contenedor__contacto mb-4">
                 <form action="">
                     <div class="row formulario">
-                        <label class="col-4" for="nombre-usuarios"> Nombre y apellido:</label>
+                        <label class="col-4 texto__formulario" for="nombre-usuarios"> Nombre y apellido:</label>
                         <input class="col-8" type="text" id="nombre-usuarios" placeholder="Ej: Tiron Jose Gonzalez"
                             required>
                     </div>
 
                     <div class="row">
-                        <label class="col-4" for="email">E-mail:</label>
+                        <label class="col-4 texto__formulario" for="email">E-mail:</label>
                         <input class="col-8" type="email" id="email" required>
                     </div>
 
                     <div class="row">
-                        <label class="col-4" for="consulta">Consulta:</label>
+                        <label class="col-4 texto__formulario" for="consulta">Consulta:</label>
                         <textarea class="col-8" name="" id="consulta" cols="30" rows="10"></textarea>
                     </div>
 
                     <div class="row">
-                        <label class="col-8" for="">Aceptas nuestros terminos y condiciones?</label>
+                        <label class="col-8 texto__formulario" for="">Aceptas nuestros terminos y condiciones?</label>
                         <input class="col-1" type="checkbox" value="aceptalosterminos">
                     </div>
 
                     <div class="row">
-                        <span class="col-8">Recibir noticias y actualizaciones</span>
-                        <label class="col-1" for="">Si</label>
-                        <input class="col-1" type="radio" name="noticias" value="noticias-si">
-                        <label class="col-1" for="">No</label>
-                        <input class="col-1" type="radio" name="noticias" value="noticias-no">
+                        <span class="col-8 texto__formulario">Recibir noticias y actualizaciones</span>
+                        <label class="col-1 texto__formulario" for="">Si</label>
+                        <input class="col-1 texto__formulario" type="radio" name="noticias" value="noticias-si">
+                        <label class="col-1 texto__formulario" for="">No</label>
+                        <input class="col-1 texto__formulario" type="radio" name="noticias" value="noticias-no">
                     </div>
 
                     <div class="row">
-                        <input type="submit" value="Enviar">
+                        <input class="texto__formulario" type="submit" value="Enviar">
                     </div>
                 </form>
             </div>
